[gd_scene load_steps=19 format=3 uid="uid://ciqrpd5675boy"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_rvo1c"]
[ext_resource type="PackedScene" uid="uid://b2ew46dlu7u7x" path="res://Player/GrenadeLauncher.tscn" id="3_54qc4"]
[ext_resource type="Script" path="res://Player/CameraController.gd" id="3_qrkly"]
[ext_resource type="Script" path="res://Player/MeleeAttackArea.gd" id="3_v1vve"]
[ext_resource type="PackedScene" uid="uid://c0mo8tek77du4" path="res://Player/CharacterSkin.tscn" id="4_ign62"]
[ext_resource type="Script" path="res://Player/CoinsContainer.gd" id="7_8eehq"]
[ext_resource type="PackedScene" uid="uid://cqw64w6kb0fyg" path="res://Player/Coin/CoinVisuals/CoinModel.tscn" id="8_6qxxt"]
[ext_resource type="AudioStream" uid="uid://bx0t7f2nuk2lr" path="res://Player/Sounds/03_Step_grass_03.wav" id="10_wx4h4"]
[ext_resource type="AudioStream" uid="uid://cbcb2d63weegs" path="res://Player/Sounds/45_Landing_01.wav" id="11_3s4i7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8x2xm"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_gqx4v"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_2ooex"]
dof_blur_far_enabled = true
dof_blur_far_distance = 45.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s5n07"]

[sub_resource type="SphereMesh" id="SphereMesh_uex0s"]

[sub_resource type="Animation" id="Animation_nl12d"]
resource_name = "Attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeAnchor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("MeleeAnchor/MeleeSphere:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeAttackArea")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"activate"
}, {
"args": [],
"method": &"deactivate"
}]
}

[sub_resource type="Animation" id="Animation_pts2o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeAnchor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeAnchor/MeleeSphere:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xvsui"]
_data = {
"Attack": SubResource("Animation_nl12d"),
"RESET": SubResource("Animation_pts2o")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pcytg"]
radius = 0.721485
height = 2.65424

[node name="Player" type="CharacterBody3D" groups=["damageables"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_rvo1c")
bullet_speed = 14.0
acceleration = 6.0

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8x2xm")

[node name="CameraController" type="Node3D" parent="."]
top_level = true
script = ExtResource("3_qrkly")
invert_mouse_y = true
tilt_upper_limit = 0.48
tilt_lower_limit = -0.8

[node name="CameraOverShoulderPivot" type="Marker3D" parent="CameraController"]
transform = Transform3D(-0.994522, 0.0400013, -0.0965717, 0, 0.92388, 0.382683, 0.104528, 0.380587, -0.918818, -0.848491, 3.48765, -2.32639)

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(-1, -5.15034e-15, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, 0, 2.33984, 0)
shape = SubResource("SeparationRayShape3D_gqx4v")
spring_length = 10.0

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraSpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(-1, -3.71248e-14, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, -8.74228e-07, 6.04006, -9.29023)
top_level = true
attributes = SubResource("CameraAttributesPractical_2ooex")
fov = 50.0

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(0, 0, 0, 0)

[node name="GrenadeLauncher" parent="." instance=ExtResource("3_54qc4")]

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_s5n07")
target_position = Vector3(0, -2.6, 0)
margin = 0.5
max_results = 1
debug_shape_custom_color = Color(0.658824, 1, 0, 1)

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="MeleeAnchor" type="Node3D" parent="CharacterRotationRoot"]

[node name="MeleeSphere" type="MeshInstance3D" parent="CharacterRotationRoot/MeleeAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25195, 1.075, 0)
visible = false
mesh = SubResource("SphereMesh_uex0s")
skeleton = NodePath("../../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterRotationRoot/MeleeAnchor"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_xvsui")
}

[node name="MeleeAttackArea" type="Area3D" parent="CharacterRotationRoot"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.959482, 1.0525)
script = ExtResource("3_v1vve")

[node name="CollisionShape3d" type="CollisionShape3D" parent="CharacterRotationRoot/MeleeAttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.246944)
shape = SubResource("CapsuleShape3D_pcytg")
disabled = true

[node name="CharacterSkin" parent="CharacterRotationRoot" instance=ExtResource("4_ign62")]

[node name="PlayerUI" type="Control" parent="." groups=["camera_mode_toggle"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AimRecticle" type="ColorRect" parent="PlayerUI"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.5
offset_top = -3.5
offset_right = 3.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.290196)

[node name="CoinsContainer" type="HBoxContainer" parent="PlayerUI"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -336.0
offset_top = -100.0
offset_right = -80.0
offset_bottom = -4.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 30
alignment = 2
script = ExtResource("7_8eehq")

[node name="SubViewportContainer" type="SubViewportContainer" parent="PlayerUI/CoinsContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PlayerUI/CoinsContainer/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(96, 96)
render_target_update_mode = 4

[node name="Coin" parent="PlayerUI/CoinsContainer/SubViewportContainer/SubViewport" instance=ExtResource("8_6qxxt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.812403)

[node name="godot_coin" parent="PlayerUI/CoinsContainer/SubViewportContainer/SubViewport/Coin" index="0"]
transform = Transform3D(0.278847, 0, 0.960336, 0, 1, 0, -0.960336, 0, 0.278847, 0, 0, 0)
y_amplitude = 0.0

[node name="Camera3D" type="Camera3D" parent="PlayerUI/CoinsContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.604131)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PlayerUI/CoinsContainer/SubViewportContainer/SubViewport"]

[node name="CoinsLabel" type="Label" parent="PlayerUI/CoinsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Timer" type="Timer" parent="PlayerUI/CoinsContainer"]
wait_time = 3.0
one_shot = true

[node name="StepSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_wx4h4")
volume_db = 1.0

[node name="LandingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_3s4i7")
volume_db = 1.0

[connection signal="foot_step" from="CharacterRotationRoot/CharacterSkin" to="." method="play_foot_step_sound"]

[editable path="PlayerUI/CoinsContainer/SubViewportContainer/SubViewport/Coin"]
